--- a/课后作业古诗代码 .html
+++ b/课后作业古诗代码 .html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" >
+        <meta charset="utf-8" />
         <title>将进酒</title>
     </head>
     <body>
